--- a/conf/resources/RegulationDispatchResources.properties
+++ b/conf/resources/RegulationDispatchResources.properties
@@ -6,7 +6,31 @@ label.module.regulation.dispatch.domain.RegulationDispatchQueue.processCount = N
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.name = Nome
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.userToAdd = Utilizador
 
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.reference = Referência
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissionDate = Data de emissão
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.regulationReference = Regulamento
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissor = Emissor
+
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.reference = Referência
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissionDate = Data de emissão
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissor = Emissor
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.regulationReference = Regulamento
+
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.reference = Ref.
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissionDate = Emissão
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulamento
+
 link.remove=Remover
+link.view = Visualizar
+link.edit = Editar
+link.view.document = Visualizar Documento
+
+label.edit = Editar
+label.view = Visualizar
 
 
 label.workflow.meta.type.name = Despachos
@@ -18,6 +42,12 @@ label.workflow.meta.type.field.regulation = Regulamento
 link.node.configuration.regulation.dispatch.interface = Gestão dos Despachos
 
 
+message.regulation.dispatches.empty = Não existem registos
 message.remove.confirmation = Deseja remover o utilizador da fila?
 
+
+
+myorg.domain.User.presentationName = Nome
+
 title.node.configuration.module.regulation.dispatch = Despachos
+
