New Fixture: More of Regulation dispatches

--- a/conf/resources/RegulationDispatchResources.properties
+++ b/conf/resources/RegulationDispatchResources.properties
@@ -23,11 +23,20 @@ label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.em
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.dispatchDescription = Descrição
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulamento
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file = Ficheiro
 
+link.download = Download
 link.remove=Remover
 link.view = Visualizar
 link.edit = Editar
 link.view.document = Visualizar Documento
+
+link.module.regulation.dispatch.domain.RegulationDispatchProcessFile.asMainDocument = Doc. principal
+
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.displayName = Nome
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate = Data de criação 
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.active = Activo
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.mainDocument = Doc. Principal
 
 label.edit = Editar
 label.view = Visualizar
