--- a/conf/resources/RegulationDispatchResources.properties
+++ b/conf/resources/RegulationDispatchResources.properties
@@ -22,6 +22,7 @@ label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.em
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor.name = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulamento
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.observations = Observações
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.articles = Artigos
 
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.reference = Referência
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissionDate = Data de emissão
@@ -29,6 +30,25 @@ label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInf
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.regulationReference = Regulamento
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissor = Emissor
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file = Ficheiro
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.articles = Artigos
+
+
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.displayName = Nome
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate = Data de criação 
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.active = Activo
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.mainDocument = Doc. Principal
+
+
+label.edit = Editar
+label.remove=Remover
+label.view = Visualizar
+
+label.workflow.meta.type.name = Despachos
+label.workflow.meta.type.description = Esta aplicação gere os despachos
+label.workflow.meta.type.field.emissionDate = Data de emissão
+label.workflow.meta.type.field.regulation = Regulamento
+label.workflow.meta.type.field.regulation.reference = Referência
+label.workflow.meta.type.field.articles = Artigos
 
 link.cancel = Cancelar
 link.create = Criar
@@ -48,23 +68,6 @@ link.regulation.dispatch.create.entry = Criar registo
 
 link.node.configuration.regulation.dispatch.interface = Gestão dos Despachos
 
-label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.displayName = Nome
-label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate = Data de criação 
-label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.active = Activo
-label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.mainDocument = Doc. Principal
-
-
-label.edit = Editar
-label.remove=Remover
-label.view = Visualizar
-
-label.workflow.meta.type.name = Despachos
-label.workflow.meta.type.description = Esta aplicação gere os despachos
-label.workflow.meta.type.field.emissionDate = Data de emissão
-label.workflow.meta.type.field.regulation = Regulamento
-label.workflow.meta.type.field.regulation.reference = Referência
-
-
 message.regulation.dispatches.empty = Não existem registos
 message.remove.confirmation = Deseja remover o utilizador da fila?
 message.none.regulation.dispatch.systems = Não está inserido em nenhum dos sistemas de gestão de despachos
@@ -72,6 +75,7 @@ message.please.choose.one.of.systems.below = Escolha um dos sistemas.
 message.regulation.dispatch.management.system = Clique neste link para a gestão de sistemas de despachos
 message.upload.documents.pdf.maximum.8mb = Só poderá submeter documentos em pdf com o tamanho máximo de 8 Mb.
 message.regulation.dispatch.confirmation = Deseja remover o registo?
+message.regulation.dispatch.documents.empty = Este registo não contém nenhum documento
 
 myorg.domain.User.presentationName = Nome
 
