--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -10,7 +9,7 @@
 
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1.0-rc2</version>
     <packaging>jar</packaging>
     <name>regulation-dispatch</name>
 
@@ -18,7 +17,7 @@
         <connection>scm:git:git@github.com:ist-dsi/regulation-dispatch.git</connection>
         <developerConnection>scm:git:git@github.com:ist-dsi/regulation-dispatch.git</developerConnection>
         <url>http://ist-dsi.github.io/regulation-dispatch/</url>
-        <tag>HEAD</tag>
+        <tag>v1.1.0-rc2</tag>
     </scm>
 
     <properties>
