--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
-    <version>1.1.1</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>regulation-dispatch</name>
 
@@ -17,7 +17,7 @@
         <connection>scm:git:git@github.com:ist-dsi/regulation-dispatch.git</connection>
         <developerConnection>scm:git:git@github.com:ist-dsi/regulation-dispatch.git</developerConnection>
         <url>http://ist-dsi.github.io/regulation-dispatch/</url>
-        <tag>v1.1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
