--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
     </properties>
 
     <dependencies>
+	<dependency>
+	        <groupId>org.eclipse.equinox</groupId>
+	        <artifactId>app</artifactId>
+	        <version>1.0.0-v20070606</version>
+	</dependency>
         <dependency>
             <groupId>pt.ist</groupId>
             <artifactId>bennu-core</artifactId>
