--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.1.2</version>
     <packaging>jar</packaging>
     <name>regulation-dispatch</name>
 
