--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
     <name>Regulation Dispatch</name>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc1</version>
     <packaging>jar</packaging>
 
     <scm>
@@ -22,17 +22,18 @@
 
     <properties>
         <version.org.fenixedu.bennu.core>3.4.0</version.org.fenixedu.bennu.core>
-        <version.org.fenixedu.organization>1.2.0-SNAPSHOT</version.org.fenixedu.organization>
-        <version.org.fenixedu.workflow>2.0.0-SNAPSHOT</version.org.fenixedu.workflow>
+        <version.org.fenixedu.organization>2.0.0-rc1</version.org.fenixedu.organization>
+        <version.org.fenixedu.workflow>2.0.0-rc1</version.org.fenixedu.workflow>
         <version.org.webjars.jquery-ui>1.11.1</version.org.webjars.jquery-ui>
+	<version.org.eclipse.equinox.app>1.0.0-v20070606</version.org.eclipse.equinox.app>
     </properties>
 
     <dependencies>
-		<dependency>
-	        <groupId>org.eclipse.equinox</groupId>
-	        <artifactId>app</artifactId>
-	        <version>1.0.0-v20070606</version>
-		</dependency>
+	<dependency>
+	       <groupId>org.eclipse.equinox</groupId>
+	       <artifactId>app</artifactId>
+	       <version>${version.org.eclipse.equinox.app}</version>
+	</dependency>
         <dependency>
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-core</artifactId>
@@ -48,11 +49,11 @@
             <artifactId>workflow</artifactId>
             <version>${version.org.fenixedu.workflow}</version>
         </dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>jquery-ui</artifactId>
-			<version>${version.org.webjars.jquery-ui}</version>
-		</dependency>
+	<dependency>
+		<groupId>org.webjars</groupId>
+		<artifactId>jquery-ui</artifactId>
+		<version>${version.org.webjars.jquery-ui}</version>
+	</dependency>
     </dependencies>
 
     <repositories>
