--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
     </scm>
 
     <properties>
-        <version.org.fenixedu.bennu.core>3.4.0</version.org.fenixedu.bennu.core>
-        <version.org.fenixedu.organization>2.0.0-rc1</version.org.fenixedu.organization>
-        <version.org.fenixedu.workflow>2.0.0-rc1</version.org.fenixedu.workflow>
+        <version.org.fenixedu.bennu.core>3.4.1</version.org.fenixedu.bennu.core>
+        <version.org.fenixedu.organization>2.0.0</version.org.fenixedu.organization>
+        <version.org.fenixedu.workflow>2.0.0</version.org.fenixedu.workflow>
         <version.org.webjars.jquery-ui>1.11.1</version.org.webjars.jquery-ui>
         <version.org.eclipse.equinox.app>1.0.0-v20070606</version.org.eclipse.equinox.app>
     </properties>
