--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
     <name>Regulation Dispatch</name>
-    <version>2.0.0</version>
+    <version>3.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <scm>
@@ -23,6 +23,7 @@
 
     <properties>
         <version.org.fenixedu.bennu.core>3.4.1</version.org.fenixedu.bennu.core>
+        <version.org.fenixedu.bennu-spring>1.1.0</version.org.fenixedu.bennu-spring>
         <version.org.fenixedu.organization>2.0.0</version.org.fenixedu.organization>
         <version.org.fenixedu.workflow>2.0.0</version.org.fenixedu.workflow>
         <version.org.webjars.jquery-ui>1.11.1</version.org.webjars.jquery-ui>
@@ -39,6 +40,11 @@
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-core</artifactId>
             <version>${version.org.fenixedu.bennu.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-spring</artifactId>
+            <version>${version.org.fenixedu.bennu-spring}</version>
         </dependency>
         <dependency>
             <groupId>org.fenixedu</groupId>
