--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
     <name>Regulation Dispatch</name>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.1</version>
     <packaging>jar</packaging>
 
     <scm>
