--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
     <properties>
         <version.org.fenixedu.bennu.core>4.0.0.RC2</version.org.fenixedu.bennu.core>
         <version.org.fenixedu.bennu-spring>1.2.0</version.org.fenixedu.bennu-spring>
-        <version.org.fenixedu.organization>3.0.0.RC1</version.org.fenixedu.organization>
-        <version.org.fenixedu.workflow>2.2.0.RC1</version.org.fenixedu.workflow>
+        <version.org.fenixedu.organization>3.0-SNAPSHOT</version.org.fenixedu.organization>
+        <version.org.fenixedu.workflow>2.2.0-SNAPSHOT</version.org.fenixedu.workflow>
         <version.org.webjars.jquery-ui>1.11.1</version.org.webjars.jquery-ui>
         <version.org.eclipse.equinox.app>1.0.0-v20070606</version.org.eclipse.equinox.app>
     </properties>
