--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
     <name>Regulation Dispatch</name>
-    <version>4.0-SNAPSHOT</version>
+    <version>3.1.0.RC2</version>
     <packaging>jar</packaging>
 
     <scm>
