--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
     <name>Regulation Dispatch</name>
-    <version>4.0-SNAPSHOT</version>
+    <version>DEV-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <scm>
@@ -22,10 +22,10 @@
     </scm>
 
     <properties>
-        <version.org.fenixedu.bennu.core>4.0.0.RC2</version.org.fenixedu.bennu.core>
+        <version.org.fenixedu.bennu.core>4.0.1</version.org.fenixedu.bennu.core>
         <version.org.fenixedu.bennu-spring>1.2.0</version.org.fenixedu.bennu-spring>
-        <version.org.fenixedu.organization>3.0.0.RC2</version.org.fenixedu.organization>
-        <version.org.fenixedu.workflow>2.2.0.RC2</version.org.fenixedu.workflow>
+        <version.org.fenixedu.organization>3.0.0</version.org.fenixedu.organization>
+        <version.org.fenixedu.workflow>2.2.2</version.org.fenixedu.workflow>
         <version.org.webjars.jquery-ui>1.11.1</version.org.webjars.jquery-ui>
         <version.org.eclipse.equinox.app>1.0.0-v20070606</version.org.eclipse.equinox.app>
     </properties>
