--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,7 @@
     </scm>
 
     <properties>
-        <version.org.fenixedu.bennu.core>5.0.0</version.org.fenixedu.bennu.core>
-        <version.org.fenixedu.bennu-spring>1.2.0</version.org.fenixedu.bennu-spring>
+        <version.org.fenixedu.bennu.core>5.1.1</version.org.fenixedu.bennu.core>
         <version.org.fenixedu.organization>3.2.0</version.org.fenixedu.organization>
         <version.org.fenixedu.workflow>3.0.0</version.org.fenixedu.workflow>
         <version.org.webjars.jquery-ui>1.11.1</version.org.webjars.jquery-ui>
@@ -44,7 +43,7 @@
         <dependency>
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-spring</artifactId>
-            <version>${version.org.fenixedu.bennu-spring}</version>
+            <version>${version.org.fenixedu.bennu.core}</version>
         </dependency>
         <dependency>
             <groupId>org.fenixedu</groupId>
