--- a/src/main/resources/resources/RegulationDispatchResources.properties
+++ b/src/main/resources/resources/RegulationDispatchResources.properties
@@ -1,48 +1,49 @@
+# 🔥🔥🔥🔥🔥 This comment is here to force utf-8 🔥🔥🔥🔥🔥
 
 button.add = Adicionar
-button.no  = N\u00E3o
+button.no  = Não
 button.yes = Sim
 
-error.regulation.dispatch.queue.user.already.in.queue = O utilizador j\u00E1 est\u00E1 registo no sistema
+error.regulation.dispatch.queue.user.already.in.queue = O utilizador já está registo no sistema
 
 label.edit                                                                                                   = Editar
 label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.active                                 = Activo
-label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate                           = Data de cria\u00E7\u00E3o 
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate                           = Data de criação 
 label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.displayName                            = Nome
 label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.mainDocument                           = Doc. Principal
 label.module.regulation.dispatch.domain.RegulationDispatchQueue.name                                         = Nome
-label.module.regulation.dispatch.domain.RegulationDispatchQueue.processesCount                               = N\u00BA registos
+label.module.regulation.dispatch.domain.RegulationDispatchQueue.processesCount                               = Nº registos
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.name                                     = Nome
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.userToAdd                                = Utilizador
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.articles                       = Artigos
-label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissionDate                   = Emiss\u00E3o
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissionDate                   = Emissão
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor                        = Emissor
-label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.instanceDescription            = Descri\u00E7\u00E3o
-label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.observations                   = Observa\u00E7\u00F5es
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.instanceDescription            = Descrição
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.observations                   = Observações
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.reference                      = Ref.
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference            = Regulamento
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.requestorUser.displayName      = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.requestorUser.name             = Emissor
-label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.dispatchDescription          = Descri\u00E7\u00E3o
-label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissionDate                 = Data de emiss\u00E3o
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.dispatchDescription          = Descrição
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissionDate                 = Data de emissão
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissor                      = Emissor
-label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.reference                    = Refer\u00EAncia
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.reference                    = Referência
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.regulationReference          = Regulamento
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.articles            = Artigos
-label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.dispatchDescription = Descri\u00E7\u00E3o
-label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissionDate        = Data de emiss\u00E3o
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissionDate        = Data de emissão
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissor             = Emissor
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file                = Ficheiro
-label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.reference           = Refer\u00EAncia
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.reference           = Referência
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.regulationReference = Regulamento
 label.remove                                                                                                 = Remover
 label.sideBar.regulation.dispatch.manage                                                                     = Despachos
 label.view                                                                                                   = Visualizar
-label.workflow.meta.type.description                                                                         = Esta aplica\u00E7\u00E3o gere os despachos
+label.workflow.meta.type.description                                                                         = Esta aplicação gere os despachos
 label.workflow.meta.type.field.articles                                                                      = Artigos
-label.workflow.meta.type.field.emissionDate                                                                  = Data de emiss\u00E3o
+label.workflow.meta.type.field.emissionDate                                                                  = Data de emissão
 label.workflow.meta.type.field.regulation                                                                    = Regulamento
-label.workflow.meta.type.field.regulation.reference                                                          = Refer\u00EAncia
+label.workflow.meta.type.field.regulation.reference                                                          = Referência
 label.workflow.meta.type.name                                                                                = Despachos
 
 link.back                                                                           = Voltar
@@ -51,36 +52,36 @@ link.create                                                                     
 link.download                                                                       = Download
 link.edit                                                                           = Editar
 link.module.regulation.dispatch.domain.RegulationDispatchProcessFile.asMainDocument = Doc. principal
-link.node.configuration.regulation.dispatch.interface                               = Gest\u00E3o dos Despachos
+link.node.configuration.regulation.dispatch.interface                               = Gestão dos Despachos
 link.regulation.dispatch.create.entry                                               = Criar registo
 link.regulation.dispatch.create.system                                              = Criar sistema
-link.regulation.dispatch.systems.management                                         = Gest\u00E3o de sistemas
+link.regulation.dispatch.systems.management                                         = Gestão de sistemas
 link.remove                                                                         = Remover
 link.submit                                                                         = Submeter
 link.view                                                                           = Visualizar
 link.view.document                                                                  = Visualizar Documento
 
-message.none.regulation.dispatch.systems        = N\u00E3o est\u00E1 inserido em nenhum dos sistemas de gest\u00E3o de despachos
+message.none.regulation.dispatch.systems        = Não está inserido em nenhum dos sistemas de gestão de despachos
 message.please.choose.one.of.systems.below      = Escolha um dos sistemas.
 message.regulation.dispatch.confirmation        = Deseja remover o registo?
-message.regulation.dispatch.documents.empty     = Este registo n\u00E3o cont\u00E9m nenhum documento
-message.regulation.dispatch.management.system   = Clique neste link para a gest\u00E3o de sistemas de despachos
+message.regulation.dispatch.documents.empty     = Este registo não contém nenhum documento
+message.regulation.dispatch.management.system   = Clique neste link para a gestão de sistemas de despachos
 message.regulation.dispatch.remove.confirmation = Deseja remover o despacho?
-message.regulation.dispatches.empty             = N\u00E3o existem registos
-message.upload.documents.pdf.maximum.8mb        = S\u00F3 poder\u00E1 submeter documentos em pdf com o tamanho m\u00E1ximo de 8 Mb.
+message.regulation.dispatches.empty             = Não existem registos
+message.upload.documents.pdf.maximum.8mb        = Só poderá submeter documentos em pdf com o tamanho máximo de 8 Mb.
 
 pt.ist.bennu.core.domain.User.presentationName = Nome
 
 title.dispatch                                      = Despacho
 title.documents                                     = Documentos
 title.node.configuration.module.regulation.dispatch = Despachos
-title.observations                                  = Observa\u00E7\u00F5es
-title.regulation.dispatch                           = Gest\u00E3o dos despachos
-title.regulation.dispatch.creation                  = Cria\u00E7\u00E3o do despacho
-title.regulation.dispatch.edition                   = Edi\u00E7\u00E3o do despacho
-title.regulation.dispatch.removal                   = Remo\u00E7\u00E3o do despacho
-title.regulation.dispatch.system.creation           = Cria\u00E7\u00E3o do sistema de despachos
-title.regulation.dispatch.system.management         = Gest\u00E3o de sistemas
+title.observations                                  = Observações
+title.regulation.dispatch                           = Gestão dos despachos
+title.regulation.dispatch.creation                  = Criação do despacho
+title.regulation.dispatch.edition                   = Edição do despacho
+title.regulation.dispatch.removal                   = Remoção do despacho
+title.regulation.dispatch.system.creation           = Criação do sistema de despachos
+title.regulation.dispatch.system.management         = Gestão de sistemas
 title.regulation.dispatch.system.properties         = Propriedades do sistema
 title.upload.documents                              = Upload de documentos
 title.users                                         = Utilizadores
