--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
     <groupId>pt.ist</groupId>
     <artifactId>regulation-dispatch</artifactId>
     <name>Regulation Dispatch</name>
-    <version>4.0.2</version>
+    <version>DEV-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <scm>
         <connection>scm:git:git@repo.dsi.tecnico.ulisboa.pt:software/tecnicolisboa/regulation-dispatch.git</connection>
         <developerConnection>scm:git:git@repo.dsi.tecnico.ulisboa.pt:software/tecnicolisboa/regulation-dispatch</developerConnection>
         <url>https://repo.dsi.tecnico.ulisboa.pt/software/tecnicolisboa/regulation-dispatch</url>
-        <tag>v4.0.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
